ostree (2016.6-0) master; urgency=medium

  [ Dan Nicholson ]
  * New upstream release

  [ Simon McVittie ]
  * Build-depend on procps, used to check for leaked processes
  * debian/test.sh: factor out our dh_auto_test wrapper, and clean
    up any stray processes even if the test fails

 -- Dan Nicholson <nicholson@endlessm.com>  Fri, 24 Jun 2016 09:56:56 -0700

ostree (2016.5-2) experimental; urgency=medium

  * Add a patch to skip the test-parent test if /var/tmp doesn't support
    user xattrs, hopefully fixing FTBFS on x86-csail-02 buildd

 -- Simon McVittie <smcv@debian.org>  Mon, 25 Apr 2016 12:51:33 +0100

ostree (2016.5-1) experimental; urgency=medium

  * New upstream release
    - Remove all patches, applied upstream
    - debian/libostree-1-1.symbols: update for new versioned symbols
    - Build-depend on libmount-dev
    - debian/copyright: update
    - debian/rules, debian/ostree-tests.install: adjust for new installation
      directory for installed-tests
    - debian/rules: use Debian's grub2-mkconfig path
  * debian/gbp.conf: use DEP-14 branch names; disable numbered patches
  * Fix ITP bug number in changelog (was #813308, should have been #697477)
  * debian/control: build-depend on attr, for the tests (only required if
    /var/tmp supports extended attributes)
  * debian/rules: clean up stale gpg-agent processes after testing
  * debian/rules: warn if there are leftover daemon processes after testing
  * debian/ostree-tests.lintian-overrides: override a couple of false
    positives
  * Run dh_auto_test with VERBOSE=1, to get logs with older debhelper
  * Build-depend on elfutils, for test-abi.sh
  * Work around #821235 to avoid undefined macro 'AQ' in some man pages
  * Add a patch to put more information in the log if tests fail,
    in an attempt to debug a failure in test/pull-resume.sh which
    I can no longer reproduce
  * Standards-version: 3.9.8 (no changes needed)
